# SerpentAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Eportalcontainer.github.io  ISSUE_TEMPLATE.md  LICENSE.md  README.md  cli.py  modulos.txt  offshoot.manifest.json  offshoot.yml  plugin.py  pyproject.toml  requirements.txt  requirements.win32.txt  serpent.py  setup.py  tasks.py
.github/: FUNDING.yml
.pytest_cache/v/cache/: nodeids
Nova pasta/keras/backend/: tensorflow_backend.py
Nova pasta/offshoot/: base.py  main.py
Nova pasta/scikit_image-0.14.2.dist-info/: DESCRIPTION.rst  METADATA  RECORD  metadata.json
SerpentJigoku_kisetsukanGamePlugin/files/api/: api.py  serpent_Jigoku_kisetsukan_game.py
SerpentTenshi2GameAgentPlugin/files/: serpent_Tenshi2_game_agent.py
config/: config.plugins.yml  config.yml
dashboard/: Thumbs.db  database.sqlite
lib/: analytics_client.py  config.py  cv.py  frame_grabber.py  game.py  game_agent.py  game_api.py  game_frame.py  game_frame_buffer.py  game_frame_limiter.py  input_controller.py  invoke_tasks.py  ocr.py  sprite.py  sprite_identifier.py  sprite_locator.py  utilities.py  window_controller.py
lib/game_launchers/: executable_game_launcher.py  steam_game_launcher.py
lib/games/: __init__.py
lib/machine_learning/context_classification/: context_classifier.py
lib/machine_learning/context_classification/context_classifiers/: __init__.py  cnn_inception_v3_context_classifier.py  svm_context_classifier.py
lib/machine_learning/reinforcement_learning/: ddqn.py  dqn.py  epsilon_greedy_q_policy.py  keyboard_mouse_action_space.py  keyboard_mouse_input_space.py  replay_memory.py
lib/visual_debugger/: visual_debugger.py  visual_debugger_app.py
lib/wamp_components/: analytics_component.py  analytics_elasticsearch_component.py
lib/window_controllers/: linux_window_controller.py  win32_window_controller.py
notebooks/: Reading Recorded Inputs.ipynb
plugins/BindingOfIsaacRebirthGameAgentPlugin/: CHANGELOG.md  plugin.py
plugins/BindingOfIsaacRebirthGameAgentPlugin/files/: binding_of_isaac_rebirth_game_agent.py
plugins/BindingOfIsaacRebirthGamePlugin/: plugin.py
plugins/BindingOfIsaacRebirthGamePlugin/files/: binding_of_isaac_rebirth_game.py
plugins/GenericFrameGrabberAgentPlugin/: plugin.py
plugins/GenericFrameGrabberAgentPlugin/files/: generic_frame_grabber_agent.py
plugins/SuperHexagonGameAgentPlugin/: plugin.py
plugins/SuperHexagonGameAgentPlugin/files/: super_hexagon_game_agent.py
plugins/SuperHexagonGamePlugin/: plugin.py
plugins/SuperHexagonGamePlugin/files/: super_hexagon_game.py
plugins/YouMustBuildABoatGameAgentPlugin/: plugin.py
plugins/YouMustBuildABoatGameAgentPlugin/files/: you_must_build_a_boat_game_agent.py
plugins/YouMustBuildABoatGamePlugin/: plugin.py
plugins/YouMustBuildABoatGamePlugin/files/: you_must_build_a_boat_game.py
serpent/: analytics_client.py  config.py  crossbar.json  cv.py  datasets.py  enums.py  environment.py  frame_grabber.py  frame_transformation_pipeline.py  frame_transformer.py  game.py  game_agent.py  game_api.py  game_frame.py  game_frame_buffer.py  game_frame_limiter.py  game_launcher.py  input_controller.py  input_recorder.py  logger.py  ocr.py  offshoot.manifest.json  offshoot.yml  raycasting.py  requirements.darwin.txt  requirements.linux.txt  requirements.win32.txt  serpent.py  sprite.py  sprite_identifier.py  sprite_locator.py  utilities.py  window_controller.py
serpent/config/: config.yml
serpent/dashboard/: dashboard_app.py
serpent/dashboard/cefbrowser/: cefbrowser.kv  cefbrowser.py  cefkeyboard.py  version.py
serpent/dashboard/models/: __init__.py  entities.py
serpent/dashboard/scripts/: seed_db.py
serpent/game_agents/: __init__.py
serpent/game_launchers/: __init__.py  executable_game_launcher.py  steam_game_launcher.py  web_browser_game_launcher.py
serpent/input_controllers/: __init__.py  client_input_controller.py  native_win32_input_controller.py  pyautogui_input_controller.py
serpent/loggers/: __init__.py
serpent/machine_learning/context_classification/: context_classifier.py
serpent/machine_learning/object_recognition/: object_recognizer.py
serpent/machine_learning/reinforcement_learning/: agent.py  ddqn.py  dqn.py  epsilon_greedy_q_policy.py  keyboard_mouse_action_space.py  replay_memory.py
serpent/machine_learning/reinforcement_learning/ppo/: ppo.py  (+4 more)
serpent/templates/SerpentGameAgentPlugin/: .gitattributes  plugin.py
serpent/templates/SerpentGamePlugin/: plugin.py
serpent/visual_debugger/: visual_debugger.py  visual_debugger_app.py
serpent/wamp_components/: analytics_component.py  dashboard_api_component.py  input_controller_component.py
serpent/window_controllers/: darwin_window_controller.py  linux_window_controller.py  win32_window_controller.py
templates/SerpentGameAgentPlugin/files/: serpent_game_agent.py
templates/SerpentGamePlugin/files/: serpent_game.py
tests/unit/: group13tests.py  test_agent.py  test_game_api.py  test_inputs.py  test_operating_system.py  test_operatingsystem.py  test_random_agent.py  test_setup_gui.py.py  test_window_controller_pygame.py  test_window_controller_tkinter.py
(+25 files in other folders)
